--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "r3f-perf": "^7.2.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "three-custom-shader-material": "^6.3.7",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
